--- a/app/src/main/res/layout/fragment_admin_email.xml
+++ b/app/src/main/res/layout/fragment_admin_email.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".adminClub">
+    tools:context=".adminEmail">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -74,6 +74,8 @@
                     android:visibility="visible">
 
                     <Button
+                        android:autoSizeMinTextSize="5sp"
+                        android:autoSizeTextType="uniform"
                         android:id="@+id/backButtonPopup"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -96,6 +98,8 @@
                     android:visibility="visible">
 
                     <Button
+                        android:autoSizeMinTextSize="5sp"
+                        android:autoSizeTextType="uniform"
                         android:id="@+id/saveButtonPopup"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -123,6 +127,8 @@
             android:visibility="visible">
 
             <Button
+                android:autoSizeMinTextSize="5sp"
+                android:autoSizeTextType="uniform"
                 android:id="@+id/add_button"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -152,6 +158,8 @@
                 android:background="@drawable/whitish_square">
 
                 <Button
+                    android:autoSizeMinTextSize="5sp"
+                    android:autoSizeTextType="uniform"
                     android:id="@+id/btnBack"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -174,6 +182,8 @@
                 android:background="@drawable/whitish_square">
 
                 <Button
+                    android:autoSizeMinTextSize="5sp"
+                    android:autoSizeTextType="uniform"
                     android:id="@+id/btnNext"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -249,6 +259,8 @@
                     android:visibility="visible">
 
                     <Button
+                        android:autoSizeMinTextSize="5sp"
+                        android:autoSizeTextType="uniform"
                         android:id="@+id/delete_button"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -349,6 +361,8 @@
                     android:visibility="visible">
 
                     <Button
+                        android:autoSizeMinTextSize="5sp"
+                        android:autoSizeTextType="uniform"
                         android:id="@+id/save_button"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -408,6 +422,8 @@
                     android:visibility="visible">
 
                     <Button
+                        android:autoSizeMinTextSize="5sp"
+                        android:autoSizeTextType="uniform"
                         android:id="@+id/delete_button2"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -507,6 +523,8 @@
                     android:visibility="visible">
 
                     <Button
+                        android:autoSizeMinTextSize="5sp"
+                        android:autoSizeTextType="uniform"
                         android:id="@+id/save_button2"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -567,6 +585,8 @@
                     android:visibility="visible">
 
                     <Button
+                        android:autoSizeTextType="uniform"
+                        android:autoSizeMinTextSize="5sp"
                         android:id="@+id/delete_button3"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -667,6 +687,8 @@
                     android:visibility="visible">
 
                     <Button
+                        android:autoSizeTextType="uniform"
+                        android:autoSizeMinTextSize="5sp"
                         android:id="@+id/save_button3"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
