--- a/app/src/main/res/layout/fragment_admin_lunch.xml
+++ b/app/src/main/res/layout/fragment_admin_lunch.xml
@@ -403,6 +403,8 @@
             android:visibility="visible">
 
             <Button
+                android:autoSizeTextType="uniform"
+                android:autoSizeMinTextSize="5sp"
                 android:id="@+id/save_button"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
