Added the icon and fixed the Admin toolbar.

--- a/app/src/main/res/navigation/admin_nav.xml
+++ b/app/src/main/res/navigation/admin_nav.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/admin_nav"
-    app:startDestination="@id/adminLunch">
+    app:startDestination="@id/adminCalendar">
 
     <fragment
         android:id="@+id/adminCalendar"
