--- a/app/src/main/res/layout/fragment_admin_club.xml
+++ b/app/src/main/res/layout/fragment_admin_club.xml
@@ -29,7 +29,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="2.125"
-                android:hint="Click To Enter an Email"
+                android:hint="Click To Enter A Meeting Time"
                 android:background="@drawable/teal_square"
                 android:textColor="@color/black"
                 android:textStyle="bold"/>
@@ -41,7 +41,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="2.125"
-                android:hint="Click To Enter a Class Name"
+                android:hint="Click To Enter a Club Name"
                 android:background="@drawable/teal_square"
                 android:textColor="@color/black"
                 android:textStyle="bold"/>
